Closed
Bug 761030
Opened 13 years ago
Closed 13 years ago
Crash with HTML 5 video with gstreamer enabled
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla16
People
(Reporter: stephen.moehle, Assigned: stephen.moehle)
References
Details
(Keywords: crash)
Attachments
(1 file)
1012 bytes,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:15.0) Gecko/15.0 Firefox/15.0a1
Build ID: 20120602202922
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #629660 -
Flags: review?
Assignee | ||
Comment 2•13 years ago
|
||
HTML 5 video crashes when gstreamer is enabled (--enable-gstreamer) since the fix for bug 714408 was checked in.
VideoData::Create() in content/media/nsBuiltinDecoderReader.cpp changed from calling PlanarYCbCrImage::SetData() to PlanarYCbCrImage::CopyData() from gfx/layers/ImageLayers.cpp. This means that the mOffset and mSkip members of YCbCrBuffer::Plane must now be set correctly.
nsGStreamerReader::DecodeVideoFrame() in content/media/gstreamer/nsGStreamerReader.cpp does not initialize either mOffset or mSkip, leading to a crash in CopyPlane() in gfx/layers/ImageLayers.cpp caused by the random values of mOffset and mSkip.
The fix is to initialize mOffset and mSkip to 0 in nsGStreamerReader::DecodeVideoFrame().
Component: General → Video/Audio
Updated•13 years ago
|
Attachment #629660 -
Flags: review? → review?(kinetik)
Comment 3•13 years ago
|
||
Comment on attachment 629660 [details] [diff] [review]
Patch to fix gstreamer-related crash
Thanks!
Attachment #629660 -
Flags: review?(kinetik) → review+
Updated•13 years ago
|
Assignee: nobody → stephen.moehle
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: checkin-needed
Comment 5•13 years ago
|
||
Keywords: checkin-needed
Target Milestone: --- → mozilla15
Comment 6•13 years ago
|
||
(This didn't make it in time for 15).
Target Milestone: mozilla15 → mozilla16
Comment 7•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•