Bug 761030 - Fix crash with HTML 5 video with GStreamer enabled - r=kinetik